1.17 -> 2.0:
    - devzero2000: add malloc vodo to testit.sh
    - devzero2000: define build-gcov disabled by default
    - devzero2000: fix:  make check work again
    - jbj: remove llvm warning from s/int/size_t/.
    - jbj: bump version to 1.17.DEVEL.
    - jbj: tests: test-cases for UNWANTEDARGS (Wayne Davison<wayned@samba.org>).
    - jbj: wire-up almost all *alloc's with assertions.
    - jbj: rename (to shorten) internal con->av[con->ac:con->nav] variables.
    - jbj: fix: rescusitate --enable-build-gcov AutoFu.
    - jbj: start rewriting/simplifying argv routines.
    - jbj: allocate argv array as expected, not contiguously.
    - jbj: uncouple popt internals from poptSaveFoo(), use poptSaveArg().
    - jbj: return statck under/overflow errors.
    - jbj: fix: return POPT_ERROR_UNWANTEDARG with extraneous argument.
    - jbj: internalize POPT_OPTION_DEPTH for dynamic re-config.
    - jbj: use the RPN calculator with more-or-less dc(1) syntax.
    - jbj: wire up a multi-token RPN input stack using opt->argDescrip.
    - jbj: change error returns to assert failures for development.

1.16 -> 1.17:
    - jbj: add an RPN calculator to do logical and add/subtract operations.
    - devzero2000: update to new autofu/automagic. Do make distcheck work.
    - test1: fix test 59, libtool/argv[0] conventions differ various platforms.

1.15 -> 1.16:
    - release popt-1.16.
    - add lv.po, update translations (Translation Project).
    - include xcode project files in distributed popt tar ball.
    - make distcheck is now squeaky clean.
    - permit VPATH builds.
    - add shallow tests using ISP/RAS api-sanity-autotest.pl.
    - prefix bit set routines with popt to avoid symbol coolisions w rpm.
    - add tdict.c to exercise popt bit sets against /usr/dict/words.
    - add poptBitsArgs() method to generate args bit set.
    - add methods for bit set union and intersection.
    - permit comma separated attribute lists, handle negated attributes.