@@ -1,6 +1,4 @@
-AUTOTEST =      api-sanity-autotest.pl
-
-TDIRS =		descriptors_storage header_compile_errors test_results tests
+TDIRS =	descriptors_storage header_compile_errors test_results tests
 
 EXTRA_DIST = types
 
@@ -9,6 +7,6 @@ clean-local:
 
 if HAVE_API_SANITY_AUTOTEST
 check-local:
-	-[ -d tests ] && ${AUTOTEST} -l popt -d desc -clean
-	-${AUTOTEST} -l popt -d desc -st types -gen -build -run
+	-[ -d tests ] && ${API_SANITY_AUTOTEST} -l popt -d desc -clean
+	-${API_SANITY_AUTOTEST} -l popt -d desc -st types -gen -build -run
 endif HAVE_API_SANITY_AUTOTEST
